force-app/main/default/objects/gnx__Document_generation_log__c/gnx__Document_generation_log__c.object-meta.xml
<CustomObject>
    <label>Journal de génération</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Document generation log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journaux de génération</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>