force-app/main/default/objects/gnx__Document_generation_log__c/fields/gnx__Document_template__c.field-meta.xml
<CustomField>
    <fullName>gnx__Document_template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document template</label>
    <referenceTo>gnx__Document_template__c</referenceTo>
    <relationshipLabel>Document generation logs</relationshipLabel>
    <relationshipName>Document_generation_logs</relationshipName>
    <type>Lookup</type>
</CustomField>