force-app/main/default/objects/gnx__Document_generation_log__c/fields/gnx__Links_of_document_on_remote_servers__c.field-meta.xml
<CustomField>
    <fullName>gnx__Links_of_document_on_remote_servers__c</fullName>
    <inlineHelpText>Liens du document sur le ou les endroits où il se situe</inlineHelpText>
    <label>Links of document remote servers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>