force-app/main/default/objects/gnx__Document_generation_log__c/fields/gnx__Server_version_used__c.field-meta.xml
<CustomField>
    <fullName>gnx__Server_version_used__c</fullName>
    <label>Server version used</label>
    <length>20</length>
    <type>Text</type>
</CustomField>