force-app/main/default/objects/gnx__Document_generation_log__c/fields/gnx__Sharepoint_fileId__c.field-meta.xml
<CustomField>
    <fullName>gnx__Sharepoint_fileId__c</fullName>
    <label>Sharepoint fileId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>