force-app/main/default/objects/gnx__Document_generation_log__c/listViews/gnx__All.listView-meta.xml
<ListView>
    <fullName>gnx__All</fullName>
    <columns>NAME</columns>
    <columns>gnx__Status__c</columns>
    <columns>gnx__Error_Message__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>